// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToCypressTen convertCypressProject should update project w/customized config 1`] = `
"import { defineConfig } from 'cypress'
import { nxE2EPreset } from '@nrwl/cypress/plugins/cypress-preset';
import setupNodeEvents from './src/plugins/index.js';

export default defineConfig({
e2e: {
...nxE2EPreset(__dirname),
fileServerFolder: '.',
fixturesFolder: './src/fixtures',
video: true,
videosFolder: '../../dist/cypress/apps/app-e2e/videos',
screenshotsFolder: '../../dist/cypress/apps/app-e2e/screenshots',
chromeWebSecurity: false,
baseUrl: 'http://localhost:4200',
specPattern: 'src/e2e/**/*.cy.{js,jsx,ts,tsx}',
supportFile: false,
setupNodeEvents
}
})"
`;

exports[`convertToCypressTen convertCypressProject should update project w/defaults 1`] = `
"import { defineConfig } from 'cypress'
import { nxE2EPreset } from '@nrwl/cypress/plugins/cypress-preset';


export default defineConfig({
e2e: {
...nxE2EPreset(__dirname),
fileServerFolder: '.',
fixturesFolder: './src/fixtures',
video: true,
videosFolder: '../../dist/cypress/apps/app-e2e/videos',
screenshotsFolder: '../../dist/cypress/apps/app-e2e/screenshots',
chromeWebSecurity: false,
specPattern: 'src/e2e/**/*.cy.{js,jsx,ts,tsx}',
supportFile: 'src/support/e2e.ts',

}
})"
`;

exports[`convertToCypressTen updateImports should update imports 1`] = `
"
import { getGreeting } from '../support/app.po';

import { blah } from '../support/e2e';
const eh = require('../support/e2e')

import { blah } from '../support/e2e';
const eh = require('../support/e2e')

describe('a', () => {
  beforeEach(() => {
    cy.visit('/')
    blah()
    eh()
  });

  it('should display welcome message', () => {
    // Custom command example, see \\\\\`../support/commands.ts\\\\\` file
    cy.login('my-email@something.com', 'myPassword');

    // Function helper example, see \\\\\`../support/app.po.ts\\\\\` file
    getGreeting().contains('Welcome a');
  });
});

"
`;

exports[`convertToCypressTen verifyProjectForUpgrade should allow upgrade 1`] = `
Object {
  "cypressConfigPathJson": "apps/app-e2e/cypress.json",
  "cypressConfigPathTs": "apps/app-e2e/cypress.config.ts",
  "shouldUpgrade": true,
}
`;

exports[`convertToCypressTen verifyProjectForUpgrade should not upgrade if both cypress configs are present 1`] = `
Object {
  "cypressConfigPathJson": "apps/app-e2e/cypress.json",
  "cypressConfigPathTs": "apps/app-e2e/cypress.config.ts",
  "shouldUpgrade": false,
}
`;

exports[`convertToCypressTen verifyProjectForUpgrade should not upgrade if not using cypress executor 1`] = `
Object {
  "cypressConfigPathJson": "apps/app-e2e/cypress.json",
  "cypressConfigPathTs": "apps/app-e2e/cypress.config.ts",
  "shouldUpgrade": false,
}
`;
